@@ -29,25 +29,29 @@ import org.apache.lucene.analysis.util.TokenFilterFactory;
  * &lt;fieldType name="text_lngthcnt" class="solr.TextField" positionIncrementGap="100"&gt;
  *   &lt;analyzer&gt;
  *     &lt;tokenizer class="solr.WhitespaceTokenizerFactory"/&gt;
- *     &lt;filter class="solr.LimitTokenCountFilterFactory" maxTokenCount="10"/&gt;
+ *     &lt;filter class="solr.LimitTokenCountFilterFactory" maxTokenCount="10" consumeAllTokens="false" /&gt;
  *   &lt;/analyzer&gt;
  * &lt;/fieldType&gt;</pre> 
- *
+ * <p>
+ * The {@code consumeAllTokens} property is optional and defaults to {@code false}.  See {@link LimitTokenCountFilter} for an explanation of it's use.
  */
 public class LimitTokenCountFilterFactory extends TokenFilterFactory {
 
   public static final String MAX_TOKEN_COUNT_KEY = "maxTokenCount";
+  public static final String CONSUME_ALL_TOKENS_KEY = "consumeAllTokens";
   int maxTokenCount;
+  boolean consumeAllTokens;
 
   @Override
   public void init(Map<String, String> args) {
     super.init( args );
     maxTokenCount = getInt(MAX_TOKEN_COUNT_KEY);
+    consumeAllTokens = getBoolean(CONSUME_ALL_TOKENS_KEY, false);
   }
 
   @Override
   public TokenStream create(TokenStream input) {
-    return new LimitTokenCountFilter(input, maxTokenCount);
+    return new LimitTokenCountFilter(input, maxTokenCount, consumeAllTokens);
   }
 
 }
